[gd_scene load_steps=4 format=3 uid="uid://dacrl11aege5r"]

[ext_resource type="Script" uid="uid://cydtapf6bl5t" path="res://level/fire_trap.gd" id="1_0iyyv"]
[ext_resource type="Texture2D" uid="uid://bpsd62ykc6lu1" path="res://assets/textures/traps/fire_trap.png" id="1_fjrye"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0iyyv"]
size = Vector2(12, 12)

[node name="Fire Trap" type="Area2D"]
script = ExtResource("1_0iyyv")

[node name="Fire Trap Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_fjrye")

[node name="Fire Trap Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_0iyyv")

[node name="Damage Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Damage Timer" to="." method="_on_damage_timer_timeout"]
